VenueSelector CSS Changes . remove link to google map for destination name in result page . change filter panel to be info color instead of primary to contrast with results . hover and selected css switched (hover shows border, selected shows well background and text color change) . add some comments to indicate what each div does . minor reformat of dev api page, adds a hidden anchor tag so scroll to top works better (other anchors scroll to position where title is still hidden under navbar, but not high priority to fix for now)

--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -27,11 +27,9 @@ body {
     margin-top: 10px;
 }
 
-
 .jumbotron{
     padding: 10px 0px;
 }
-
 
 
 /**** navbar fixed top issue: class for ng-view****/
@@ -196,7 +194,6 @@ div.landing div.content .row{
     }
 }
 
-
 /******************* Login styling   **********************/
 /*override login-field-icon*/
 .login-form .login-field-icon {
@@ -274,16 +271,20 @@ div.landing div.content .row{
 }
 
 .venue-result:hover {
+    border: 3px solid #2c3e50;
+}
+
+.venue-result:hover *, .venue-result:hover span.venue-rating{
+
+}
+
+.selectedVenue {
     background: #1abc9c;
     color: white;
 }
 
-.venue-result:hover *, .venue-result:hover span.venue-rating{
+.selectedVenue *, .selectedVenue span.venue-rating{
     color: white !important;
-}
-
-.selectedVenue {
-    border: 4px solid #2c3e50;
 }
 
 div > .badge {
@@ -336,7 +337,7 @@ div.selected-venues{
     overflow: auto;
     border: 1px solid #34495e;
     font-size: smaller;
-    right: 1%;
+    right: 2%;
     background: #34495e;
     color: white;
 }
@@ -345,6 +346,21 @@ div.selected-venues{
     background: white;
     border: 1px solid #ccc;
     padding: 1%;
+}
+
+
+.venue-select .panel.panel-info > .panel-heading{
+    background: #3498db;
+    color: white;
+}
+
+.venue-select .panel-info{
+    border: 1px solid #3498db;
+}
+
+.venue-select .panel{
+    background: white;
+    color: black;
 }
 
 /******************** user profile page **********************/
@@ -370,4 +386,12 @@ div.stack .row{
 
 div.data div{
     height: 150px;
+}
+
+/**************  api top anchor styling *****************/
+a.anchor{
+    display: block;
+    position: relative;
+    top: -250px;
+    visibility: hidden;
 }
